test/programs/good/typechecker/measr_7.lq
initBit :: Qbit -> Int -> Bit
initBit = measr
