test/programs/bad/function_has_qubit_arg__IncorrectNumberOfFunctionArguments.lq
fun :: Qbit -> Bit
fun qubit arg  = 1

main :: Bit
main = other
